--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -17,8 +17,69 @@
 
         </div>
     </div>
-    <div class="row">
-        Coming soon.
+        <div class="column">
+
+        <div class="ui menu">
+            <div class="ui left search item">
+                <div class="ui transparent icon input">
+                    <input id="search-users" type="text" placeholder="Search users…">
+                    <i class="search icon"></i>
+                </div>
+            </div>
+        </div>
+
+        {# Use overflow-x: scroll so that mobile views don't freak out
+        # when the table is too wide #}
+        <div style="overflow-x: scroll;">
+            <table class="ui searchable sortable unstackable selectable celled table">
+                <thead>
+                <tr>
+                    <th>Ticker</th>
+                    <th>Stocks</th>
+                    <th>Opened</th>
+                    <th>Closed</th>
+                    <th>Open price</th>
+                    <th>Close price</th>
+                    <th>Profit</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for m in positions | sort(attribute='closed') %}
+                <tr >
+                    <td >{{ m.ticker }}</td>
+                    <td >{{ m.stocks }}</td>
+                    <td >{{ m.opened }}</td>
+                    <td >{{ m.closed }}</td>
+                    <td >{{ m.open_price }}</td>
+                    <td >{{ m.close_price }}</td>
+                    <td >{{ m.profit }}</td>
+
+
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
     </div>
+
 </div>
+<script type="text/javascript">
+     $(document).ready(function () {
+            $('#search-users').keyup(function () {
+                var searchText = $(this).val();
+                if (searchText.length > 0) {
+                    $('tbody td:icontains(' + searchText + ')').addClass('positive');
+                    $('td.positive').not(':icontains(' + searchText + ')').removeClass('positive');
+                    $('tbody td').not(':icontains(' + searchText + ')').closest('tr').addClass('hidden').hide();
+                    $('tr.hidden:icontains(' + searchText + ')').removeClass('hidden').show();
+                } else {
+                    $('td.positive').removeClass('positive');
+                    $('tr.hidden').removeClass('hidden').show();
+                }
+            });
+ })
+
+
+</script>
 {% endblock %}
