--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -40,7 +40,8 @@
                     <th>Closed</th>
                     <th>Open price</th>
                     <th>Close price</th>
-                    <th>Profit</th>
+                    <th>Profit USD</th>
+                    <th>Profit %</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -52,7 +53,8 @@
                     <td >{{ m.closed }}</td>
                     <td >{{ m.open_price }}</td>
                     <td >{{ m.close_price }}</td>
-                    <td >{{ m.profit }}</td>
+                    <td >{{  "%.1f"|format(m.profit)  }}</td>
+                    <td >{{ "%.1f"|format(m.profit/(m.open_price*m.stocks)*100)   }}</td>
 
 
                 </tr>
