--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -8,6 +8,13 @@
                 <div class="page-title-icon">
                     <i class="pe-7s-albums icon-gradient bg-mean-fruit">
                     </i>
+
+                </div>
+                <div style="    margin-right: 10px;">
+                    <form action="/connections/logrestartrequest/" method="post">
+                        <input type="hidden" name="usersemail" value={{user.email}}>
+                        <button type="submit"><i class="fa fa-retweet"></i></button>
+                    </form>
                 </div>
                 <div>Trader station
                     <div class="page-title-subheading">Last state of Algotrader station reported.
@@ -20,7 +27,9 @@
                 </div>
 
                 <div>
-                    <div class="mb-2 mr-2 badge badge-pill badge-secondary">Last worker : {{ report.last_worker_execution_text }}</div>
+                    <div class="mb-2 mr-2 badge badge-pill badge-secondary">Last worker : {{
+                        report.last_worker_execution_text }}
+                    </div>
                 </div>
             </div>
             <div class="page-title-actions">
@@ -40,10 +49,11 @@
                 <div class="widget-content-wrapper text-white">
                     <div class="widget-content-left">
                         <div class="widget-heading">SMA</div>
-                        <div class="widget-subheading">Available for trading </div>
+                        <div class="widget-subheading">Available for trading</div>
                     </div>
                     <div class="widget-content-right">
-                        <div class="widget-numbers text-white"><span>$ {{ report.remaining_sma_with_safety }}</span></div>
+                        <div class="widget-numbers text-white"><span>$ {{ report.remaining_sma_with_safety }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -56,7 +66,8 @@
                         <div class="widget-subheading">Daily PnL for all positions</div>
                     </div>
                     <div class="widget-content-right">
-                        <div class="widget-numbers text-white "><span class="val_pnl">$ {{ report.dailyPnl }}</span></div>
+                        <div class="widget-numbers text-white "><span class="val_pnl">$ {{ report.dailyPnl }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -77,14 +88,14 @@
     </div>
     <div class="divider mt-0" style="margin-bottom: 30px;"></div>
     <div class="row">
-        {% for key, value in open_positions.items()  %}
+        {% for key, value in open_positions.items() %}
         {% if value['Value']!=0 %}
         <div class="col-lg-6 col-xl-4">
             <div class="card mb-3 widget-content">
                 <div class="widget-content-outer">
                     <div class="widget-content-wrapper">
                         <div class="widget-content-left">
-                            <div class="widget-heading">  {{key}}</div>
+                            <div class="widget-heading"> {{key}}</div>
                             <div class="widget-subheading">Today change:
                                 {%if value['DailyPnL']>0%}
                                 <span style="color:#3AC47D;font-weight:bold">${{value['DailyPnL']|round(1) }}</span>
@@ -94,12 +105,15 @@
                             </div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="widget-numbers {{value['profit_class']}}">{{value['profit_in_percents']|round(1) }}%</div>
+                            <div class="widget-numbers {{value['profit_class']}}">{{value['profit_in_percents']|round(1)
+                                }}%
+                            </div>
                         </div>
                     </div>
                     <div class="widget-progress-wrapper">
                         <div class="progress-bar-xs progress">
-                            <div class="progress-bar {{value['profit_progress_colour']}}" role="progressbar" aria-valuenow="20" aria-valuemin="0"
+                            <div class="progress-bar {{value['profit_progress_colour']}}" role="progressbar"
+                                 aria-valuenow="20" aria-valuemin="0"
                                  aria-valuemax="100" style="width: {{value['profit_progress_percent']}}%;"></div>
                         </div>
                         <div class="progress-sub-label">
@@ -117,56 +131,57 @@
     <div class="divider mt-0" style="margin-bottom: 30px;"></div>
     <div class="row">
         <div class="col-md-12">
-                                <div class="main-card mb-3 card">
-                                    <div class="card-header">Open orders
-                                    </div>
-                                    <div class="table-responsive">
-                                        <table class="align-middle mb-0 table table-borderless table-striped table-hover">
-                                            <thead>
-                                            <tr>
-                                                <th class="text-center">Action</th>
-                                                <th>Ticker</th>
-                                                <th class="text-center">Type</th>
-                                                <th class="text-center">adjustedStopPrice</th>
-                                                <th class="text-center">adjustedStopLimitPrice</th>
-                                                <th class="text-center">adjustedTrailingAmount</th>
-                                                <th class="text-center">percentOffset</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            {% for key, value in open_orders.items()  %}
-                                            <tr>
-                                                <td class="text-center text-muted">{{value['Action']}}</td>
-                                                <td>
-                                                    <div class="widget-content p-0">
-                                                        <div class="widget-content-wrapper">
-                                                            <div class="widget-content-left mr-3">
-                                                                <div class="widget-content-left">
-                                                                    <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg" alt="">
-                                                                </div>
-                                                            </div>
-                                                            <div class="widget-content-left flex2">
-                                                                <div class="widget-heading">{{key}}</div>
-                                                                <div class="widget-subheading opacity-7"></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                                <td class="text-center">{{value['Type']}}</td>
-                                                <td class="text-center">{{value['adjustedStopPrice']}}</td>
-                                                <td class="text-center">{{value['adjustedStopLimitPrice']}}</td>
-                                                <td class="text-center">{{value['adjustedTrailingAmount']}}</td>
-                                                <td class="text-center">{{value['percentOffset']}}</td>
-                                                <td class="text-center">
-                                                    <div class="badge badge-warning">Profit</div>
-                                                </td>
-                                            </tr>
-                                            {% endfor %}
-                                            </tbody>
-                                        </table>
+            <div class="main-card mb-3 card">
+                <div class="card-header">Open orders
+                </div>
+                <div class="table-responsive">
+                    <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th class="text-center">Action</th>
+                            <th>Ticker</th>
+                            <th class="text-center">Type</th>
+                            <th class="text-center">adjustedStopPrice</th>
+                            <th class="text-center">adjustedStopLimitPrice</th>
+                            <th class="text-center">adjustedTrailingAmount</th>
+                            <th class="text-center">percentOffset</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for key, value in open_orders.items() %}
+                        <tr>
+                            <td class="text-center text-muted">{{value['Action']}}</td>
+                            <td>
+                                <div class="widget-content p-0">
+                                    <div class="widget-content-wrapper">
+                                        <div class="widget-content-left mr-3">
+                                            <div class="widget-content-left">
+                                                <img width="40" class="rounded-circle" src="assets/images/avatars/4.jpg"
+                                                     alt="">
+                                            </div>
+                                        </div>
+                                        <div class="widget-content-left flex2">
+                                            <div class="widget-heading">{{key}}</div>
+                                            <div class="widget-subheading opacity-7"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </td>
+                            <td class="text-center">{{value['Type']}}</td>
+                            <td class="text-center">{{value['adjustedStopPrice']}}</td>
+                            <td class="text-center">{{value['adjustedStopLimitPrice']}}</td>
+                            <td class="text-center">{{value['adjustedTrailingAmount']}}</td>
+                            <td class="text-center">{{value['percentOffset']}}</td>
+                            <td class="text-center">
+                                <div class="badge badge-warning">Profit</div>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script type="text/javascript" src="{{ url_for('static', filename='assets/scripts/traderstation.js') }}"></script>
