--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -50,7 +50,6 @@
                 </div>
             </div>
         </div>
-        {% endif %}
         <div class="app-header__mobile-menu">
             <div>
                 <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
@@ -60,36 +59,41 @@
                 </button>
             </div>
         </div>
+        {% endif %}
         <div class="app-header__menu">
-                <span>
-                    <button type="button"
-                            class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                        <span class="btn-icon-wrapper">
-                            <i class="fa fa-ellipsis-v fa-w-6"></i>
-                        </span>
-                    </button>
-                </span>
+            <span>
+                <button type="button"
+                        class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+                    <span class="btn-icon-wrapper">
+                        <i class="fa fa-ellipsis-v fa-w-6"></i>
+                    </span>
+                </button>
+            </span>
+        </div>
+        <div style="order: 2">
+            <ul class="header-menu nav">
+                {% if current_user.is_admin() %}
+                    <li class="btn-group nav-item">
+                        <a href="/admin/" class="nav-link">
+                            <i class="nav-link-icon fa fa-cogs"></i>
+                            Administrator Dashboard
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
         <div class="app-header__content">
-            <div class="app-header-left" style="width: 40%;">
+            <div class="app-header-left" style="width: 50%;">
                 <div class="header-btn-lg pr-0">
                     <div class="widget-content p-0">
                         <div class="widget-content-wrapper">
                             <ul class="header-menu nav">
-                            <li class="btn-group" style="width: 35%">
-                                <a href="/" class="nav-link">
-                                    <img class="logo-img" style="width: 93%;"
-                                         src="../../static/images/Logos_New/logo_transparent_background.png">
-                                </a>
-                            </li>
-<!--                            {% if current_user.is_admin() %}-->
-<!--                            <li class="btn-group nav-item">-->
-<!--                                <a href="/admin/" class="nav-link">-->
-<!--                                    <i class="nav-link-icon fa fa-cogs"></i>-->
-<!--                                    Administrator Dashboard-->
-<!--                                </a>-->
-<!--                            </li>-->
-<!--                            {% endif %}-->
+                                <li class="btn-group" style="width: 40%">
+                                    <a href="/" class="nav-link">
+                                        <img class="logo-img" style="width: 93%;"
+                                             src="../../static/images/Logos_New/logo_transparent_background.png">
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -100,14 +104,6 @@
                     <div class="widget-content p-0">
                         <div class="widget-content-wrapper">
                             <ul class="header-menu nav">
-                                {% if current_user.is_admin() %}
-                                <li class="btn-group nav-item">
-                                <a href="/admin/" class="nav-link">
-                                    <i class="nav-link-icon fa fa-cogs"></i>
-                                    Administrator Dashboard
-                                </a>
-                            </li>
-                                {% endif %}
                                 {% if current_user.is_authenticated %}
                                 <li class="btn-group nav-item">
                                     <a href="/account/manage/info" class="nav-link">
@@ -136,7 +132,6 @@
                                 </li>
                                 {% endif %}
                             </ul>
-
                         </div>
                     </div>
                 </div>
